# sde-workspace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.ptbr.md  Makefile  README.en.md  README.md  README.ptbr.md  TODO.md  TODO_EVOLUTION.md  boot.sh  install.sh  orchestrator.md  planing.md  setup-copilot.sh
.github/: copilot-instructions.md
.github/chatmodes/: architect.chatmode.md  developer.chatmode.md  orchestrator.chatmode.md  qa.chatmode.md  reviewer.chatmode.md
.sde_workspace/: README.md
.sde_workspace/.github/: copilot-instructions.md
.sde_workspace/knowledge/: README.md  manifest.json
.sde_workspace/system/: GITHUB_DUPLICATION_FIX.md
.sde_workspace/system/scripts/: README.md  apply_handoff_checklist.sh  promote_artifact.sh  pyproject.toml  report_knowledge_weekly.sh  test_validate_handoff.sh  validate_manifest.sh
.sde_workspace/system/scripts/bash/: compute_artifact_hashes.sh  report_handoff_metrics.sh  report_knowledge_metrics.sh  scan_knowledge.sh  test_validate_handoff.sh  validate_handoff.sh
.sde_workspace/system/scripts/src/sde_scripts/: __init__.py  gemini_client.py  shell_orchestrator.py  transcribe_mp4.py  transcribe_pdf.py
.sde_workspace/system/scripts/src/sde_scripts/bash/: archive_deprecated.sh  report_knowledge_health.sh  resolve_knowledge.sh  scan_knowledge.sh  supersede_artifact.sh
backup_docs/: README_pt-br.md
planning/design/: dd_agente_context.md  dd_knowledge_resolution.md  dd_manifest_indexacao.md
system/agents/: architect.md  developer.md  qa.md  reviewer.md
system/templates/: qa_report_template.md  (+3 more)
(+79 files in other folders)
